--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SHOPit</title>
   </head>
-  <body>
+  <body class="bg-orange-300 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
